[project]
name = "RobAuraLoss"
version = "0.1.0"
description = "Collection of audio-focused loss functions in PyTorch."
authors = [
    { name = "Robbie Sutherland" },
    { email = "rwhsutherland1@sheffield.ac.uk" },
]
dependencies = ["torch", "numpy"]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "attrs"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
all = ["matplotlib", "librosa", "scipy", "scipy"]
